--- a/test/known-good/C/src/modal_models/BanksCount3ModesComplex.html
+++ b/test/known-good/C/src/modal_models/BanksCount3ModesComplex.html
@@ -253,7 +253,7 @@ output
 ] 
 </span>
 <span class="source-lf variable-other-lflang">
-never
+neverp
 </span>
 <span class="source-lf">
 :
@@ -788,7 +788,7 @@ count
 ->
 </span>
 <span class="source-lf">
- never
+ neverp
 </span>
 
 <span class="source-lf">
@@ -3634,7 +3634,7 @@ counters
 .
 </span>
 <span class="source-lf variable-other-lflang">
-never
+neverp
 </span>
 <span class="source-lf">
  
