--- a/test/known-good/Python/src/modal_models/BanksCount3ModesComplex.html
+++ b/test/known-good/Python/src/modal_models/BanksCount3ModesComplex.html
@@ -217,7 +217,7 @@ output
 ] 
 </span>
 <span class="source-lf variable-other-lflang">
-never
+neverp
 </span>
 
 <span class="source-lf">
@@ -731,7 +731,7 @@ count
 ->
 </span>
 <span class="source-lf">
- never
+ neverp
 </span>
 
 <span class="source-lf">
@@ -3553,7 +3553,7 @@ counters
 .
 </span>
 <span class="source-lf variable-other-lflang">
-never
+neverp
 </span>
 <span class="source-lf">
  
