--- a/test/known-good/Python/src/modal_models/ModalNestedReactions.html
+++ b/test/known-good/Python/src/modal_models/ModalNestedReactions.html
@@ -124,7 +124,7 @@ output
  
 </span>
 <span class="source-lf variable-other-lflang">
-never
+neverp
 </span>
 
 <span class="source-lf">
@@ -345,14 +345,14 @@ reaction
 ->
 </span>
 <span class="source-lf">
- never 
+ neverp 
 </span>
 <span class="source-lf meta-embedded-block-py">
 {=
 </span>
 
 <span class="source-lf meta-embedded-block-py">
-      never.set(True)
+      neverp.set(True)
 </span>
 
 <span class="source-lf meta-embedded-block-py">
@@ -696,7 +696,7 @@ counter
 .
 </span>
 <span class="source-lf variable-other-lflang">
-never
+neverp
 </span>
 <span class="source-lf">
 ) 
