--- a/test/known-good/C/src/ActionIsPresentReset.html
+++ b/test/known-good/C/src/ActionIsPresentReset.html
@@ -1,13 +1,3 @@
-<span class="source-lf comment-block-lflang">
-/**
-</span>
-<span class="source-lf comment-block-lflang">
- Test that enclaves all stop at the time requested by the first enclave to request a stop. 
-</span>
-<span class="source-lf comment-block-lflang">
-*/
-</span>
-
 <span class="source-lf meta-targetspec-lflang keyword-control-lflang">
 target
 </span>
@@ -28,244 +18,29 @@ C
 : 
 </span>
 <span class="source-lf meta-targetspec-lflang constant-numeric-int-lflang">
-10
+7
 </span>
 <span class="source-lf meta-targetspec-lflang">
  
 </span>
 <span class="source-lf meta-targetspec-lflang constant-numeric-lflang">
-sec
+msecs
+</span>
+<span class="source-lf meta-targetspec-lflang">
+,
+</span>
+
+<span class="source-lf meta-targetspec-lflang variable-parameter-lflang">
+  fast
+</span>
+<span class="source-lf meta-targetspec-lflang">
+: 
+</span>
+<span class="source-lf meta-targetspec-lflang constant-language-lflang">
+true
 </span>
 
 <span class="source-lf meta-targetspec-lflang">
-}
-</span>
-
-<span class="source-lf">
-
-</span>
-
-<span class="source-lf storage-modifier-lflang">
-reactor
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf entity-name-type-lflang">
-Stop
-</span>
-<span class="source-lf">
-(stop_time: 
-</span>
-<span class="source-lf storage-type-lflang">
-time
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf constant-numeric-int-lflang">
-5
-</span>
-<span class="source-lf">
- s) {
-</span>
-
-<span class="source-lf">
-  
-</span>
-<span class="source-lf keyword-control-lflang">
-preamble
-</span>
-<span class="source-lf">
- {
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-
-<span class="source-lf comment-line-double-dash-lflang">
-    
-</span>
-<span class="source-lf comment-line-double-dash-lflang">
-#include "platform.h" // Defines PRINTF_TIME
-</span>
-
-<span class="source-lf">
-  
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-<span class="source-lf">
-}
-</span>
-
-<span class="source-lf">
-  
-</span>
-<span class="source-lf storage-modifier-lflang">
-timer
-</span>
-<span class="source-lf">
- t(stop_time)
-</span>
-
-<span class="source-lf">
-
-</span>
-
-<span class="source-lf">
-  
-</span>
-<span class="source-lf keyword-control-lflang">
-reaction
-</span>
-<span class="source-lf">
-(
-</span>
-<span class="source-lf">
-t) {
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-
-<span class="source-lf">
-    lf_request_stop();
-</span>
-
-<span class="source-lf">
-  
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-<span class="source-lf">
-}
-</span>
-
-<span class="source-lf">
-
-</span>
-
-<span class="source-lf">
-  
-</span>
-<span class="source-lf keyword-control-lflang">
-reaction
-</span>
-<span class="source-lf">
-(
-</span>
-<span class="source-lf support-variable-lflang">
-shutdown
-</span>
-<span class="source-lf">
-) {
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-
-<span class="source-lf">
-    lf_print(
-</span>
-<span class="source-lf string-quoted-double-lflang">
-"
-</span>
-<span class="source-lf string-quoted-double-lflang">
-Stopped at tag (
-</span>
-<span class="source-lf string-quoted-double-lflang">
-"
-</span>
-<span class="source-lf">
- PRINTF_TIME 
-</span>
-<span class="source-lf string-quoted-double-lflang">
-"
-</span>
-<span class="source-lf string-quoted-double-lflang">
-, %d)
-</span>
-<span class="source-lf string-quoted-double-lflang">
-"
-</span>
-<span class="source-lf">
-, lf_time_logical_elapsed(), lf_tag()
-</span>
-<span class="source-lf keyword-operator-lflang">
-.
-</span>
-<span class="source-lf">
-microstep);
-</span>
-
-<span class="source-lf">
-    if (lf_time_logical_elapsed() !
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-<span class="source-lf">
- 50000000LL || lf_tag()
-</span>
-<span class="source-lf keyword-operator-lflang">
-.
-</span>
-<span class="source-lf">
-microstep !
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf constant-numeric-int-lflang">
-1
-</span>
-<span class="source-lf">
-) {
-</span>
-
-<span class="source-lf">
-        lf_print_error_and_exit(
-</span>
-<span class="source-lf string-quoted-double-lflang">
-"
-</span>
-<span class="source-lf string-quoted-double-lflang">
-Expected stop tag to be (50ms, 1).
-</span>
-<span class="source-lf string-quoted-double-lflang">
-"
-</span>
-<span class="source-lf">
-);
-</span>
-
-<span class="source-lf">
-    }
-</span>
-
-<span class="source-lf">
-  
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-<span class="source-lf">
-}
-</span>
-
-<span class="source-lf">
 }
 </span>
 
@@ -289,89 +64,288 @@ reactor
 <span class="source-lf">
   
 </span>
-<span class="source-lf keyword-operator-lflang">
-@
+<span class="source-lf storage-modifier-lflang">
+logical
 </span>
 <span class="source-lf">
-enclave
+ 
+</span>
+<span class="source-lf storage-modifier-lflang">
+action
+</span>
+<span class="source-lf">
+ 
+</span>
+<span class="source-lf variable-other-lflang">
+a
 </span>
 
 <span class="source-lf">
   
 </span>
-<span class="source-lf variable-other-constant-reactorinstance-lflang">
-s1
+<span class="source-lf storage-modifier-lflang">
+logical
 </span>
 <span class="source-lf">
  
 </span>
-<span class="source-lf keyword-operator-lflang">
-=
+<span class="source-lf storage-modifier-lflang">
+action
 </span>
 <span class="source-lf">
  
 </span>
-<span class="source-lf keyword-control-new-lflang">
-new
+<span class="source-lf variable-other-lflang">
+b
 </span>
+
 <span class="source-lf">
- 
-</span>
-<span class="source-lf entity-name-type-lflang">
-Stop
-</span>
-<span class="source-lf">
-()
+
 </span>
 
 <span class="source-lf">
   
 </span>
-<span class="source-lf keyword-operator-lflang">
-@
+<span class="source-lf keyword-control-lflang">
+reaction
 </span>
 <span class="source-lf">
-enclave
+(
+</span>
+<span class="source-lf support-variable-lflang">
+startup
+</span>
+<span class="source-lf">
+) 
+</span>
+<span class="source-lf keyword-operator-lflang">
+->
+</span>
+<span class="source-lf">
+ a {
+</span>
+<span class="source-lf keyword-operator-lflang">
+=
 </span>
 
 <span class="source-lf">
-  
-</span>
-<span class="source-lf variable-other-constant-reactorinstance-lflang">
-s2
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf keyword-control-new-lflang">
-new
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf entity-name-type-lflang">
-Stop
-</span>
-<span class="source-lf">
-(stop_time 
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-<span class="source-lf">
- 
+    lf_schedule(a, MSEC(
 </span>
 <span class="source-lf constant-numeric-int-lflang">
-50
+1
 </span>
 <span class="source-lf">
- ms)
+));
+</span>
+
+<span class="source-lf">
+  
+</span>
+<span class="source-lf keyword-operator-lflang">
+=
+</span>
+<span class="source-lf">
+}
+</span>
+
+<span class="source-lf">
+
+</span>
+
+<span class="source-lf">
+  
+</span>
+<span class="source-lf keyword-control-lflang">
+reaction
+</span>
+<span class="source-lf">
+(
+</span>
+<span class="source-lf">
+a, b) 
+</span>
+<span class="source-lf keyword-operator-lflang">
+->
+</span>
+<span class="source-lf">
+ a, b {
+</span>
+<span class="source-lf keyword-operator-lflang">
+=
+</span>
+
+<span class="source-lf">
+    if (a
+</span>
+<span class="source-lf keyword-operator-lflang">
+->
+</span>
+<span class="source-lf">
+is_present) {
+</span>
+
+<span class="source-lf">
+        printf(
+</span>
+<span class="source-lf string-quoted-double-lflang">
+"
+</span>
+<span class="source-lf string-quoted-double-lflang">
+A
+</span>
+<span class="source-lf string-quoted-double-lflang">
+"
+</span>
+<span class="source-lf">
+);
+</span>
+
+<span class="source-lf">
+        lf_schedule(b, MSEC(
+</span>
+<span class="source-lf constant-numeric-int-lflang">
+2
+</span>
+<span class="source-lf">
+));
+</span>
+
+<span class="source-lf">
+    }
+</span>
+
+<span class="source-lf">
+    if (b
+</span>
+<span class="source-lf keyword-operator-lflang">
+->
+</span>
+<span class="source-lf">
+is_present) {
+</span>
+
+<span class="source-lf">
+        printf(
+</span>
+<span class="source-lf string-quoted-double-lflang">
+"
+</span>
+<span class="source-lf string-quoted-double-lflang">
+B
+</span>
+<span class="source-lf string-quoted-double-lflang">
+"
+</span>
+<span class="source-lf">
+);
+</span>
+
+<span class="source-lf">
+        lf_schedule(a, MSEC(
+</span>
+<span class="source-lf constant-numeric-int-lflang">
+1
+</span>
+<span class="source-lf">
+));
+</span>
+
+<span class="source-lf">
+    }
+</span>
+
+<span class="source-lf">
+
+</span>
+
+<span class="source-lf">
+    lf_print(
+</span>
+<span class="source-lf string-quoted-double-lflang">
+"
+</span>
+<span class="source-lf string-quoted-double-lflang">
+ at %d msecs with triggers (%d,%d)
+</span>
+<span class="source-lf string-quoted-double-lflang">
+"
+</span>
+<span class="source-lf">
+, lf_time_logical_elapsed() 
+</span>
+<span class="source-lf keyword-operator-lflang">
+/
+</span>
+<span class="source-lf">
+ MSEC(
+</span>
+<span class="source-lf constant-numeric-int-lflang">
+1
+</span>
+<span class="source-lf">
+), a
+</span>
+<span class="source-lf keyword-operator-lflang">
+->
+</span>
+<span class="source-lf">
+is_present, b
+</span>
+<span class="source-lf keyword-operator-lflang">
+->
+</span>
+<span class="source-lf">
+is_present);
+</span>
+
+<span class="source-lf">
+
+</span>
+
+<span class="source-lf">
+    if (a
+</span>
+<span class="source-lf keyword-operator-lflang">
+->
+</span>
+<span class="source-lf">
+is_present && b
+</span>
+<span class="source-lf keyword-operator-lflang">
+->
+</span>
+<span class="source-lf">
+is_present) {
+</span>
+
+<span class="source-lf">
+      lf_print_error_and_exit(
+</span>
+<span class="source-lf string-quoted-double-lflang">
+"
+</span>
+<span class="source-lf string-quoted-double-lflang">
+Both triggers should not be present
+</span>
+<span class="source-lf string-quoted-double-lflang">
+"
+</span>
+<span class="source-lf">
+);
+</span>
+
+<span class="source-lf">
+    }
+</span>
+
+<span class="source-lf">
+  
+</span>
+<span class="source-lf keyword-operator-lflang">
+=
+</span>
+<span class="source-lf">
+}
 </span>
 
 <span class="source-lf">
