--- a/test/known-good/C/src/TriggerIssue.html
+++ b/test/known-good/C/src/TriggerIssue.html
@@ -1,33 +1,8 @@
 <span class="source-lf comment-block-lflang">
 /**
 </span>
-
 <span class="source-lf comment-block-lflang">
- * Test a source-destination scenario where the source falls behind real-time, and reaches the
-</span>
-
-<span class="source-lf comment-block-lflang">
- * timeout much later than the destination. In this test, the destination closes the connection
-</span>
-
-<span class="source-lf comment-block-lflang">
- * early, causing the transmission to fail. Warnings will be printed.
-</span>
-
-<span class="source-lf comment-block-lflang">
- *
-</span>
-
-<span class="source-lf comment-block-lflang">
- * The test fails if the federation does not exit normally. This variant has a physical connection
-</span>
-
-<span class="source-lf comment-block-lflang">
- * between source and destination.
-</span>
-
-<span class="source-lf comment-block-lflang">
- 
+ Testing that unconnected port does not block triggering. 
 </span>
 <span class="source-lf comment-block-lflang">
 */
@@ -47,32 +22,13 @@ C
 </span>
 
 <span class="source-lf meta-targetspec-lflang variable-parameter-lflang">
-  timeout
-</span>
-<span class="source-lf meta-targetspec-lflang">
-: 
-</span>
-<span class="source-lf meta-targetspec-lflang constant-numeric-int-lflang">
-1
-</span>
-<span class="source-lf meta-targetspec-lflang">
- 
-</span>
-<span class="source-lf meta-targetspec-lflang constant-numeric-lflang">
-msec
-</span>
-<span class="source-lf meta-targetspec-lflang">
-,
-</span>
-
-<span class="source-lf meta-targetspec-lflang variable-parameter-lflang">
-  coordination
+  logging
 </span>
 <span class="source-lf meta-targetspec-lflang">
 : 
 </span>
 <span class="source-lf meta-targetspec-lflang storage-type-lflang">
-decentralized
+debug
 </span>
 
 <span class="source-lf meta-targetspec-lflang">
@@ -90,52 +46,32 @@ reactor
  
 </span>
 <span class="source-lf entity-name-type-lflang">
-Clock
+Source
 </span>
 <span class="source-lf">
-(offset: 
+ {
 </span>
-<span class="source-lf storage-type-lflang">
-time
-</span>
+
 <span class="source-lf">
- 
+  
 </span>
-<span class="source-lf keyword-operator-lflang">
-=
+<span class="source-lf storage-modifier-lflang">
+output
 </span>
 <span class="source-lf">
  
 </span>
-<span class="source-lf constant-numeric-int-lflang">
-0
+<span class="source-lf variable-other-lflang">
+x
 </span>
 <span class="source-lf">
-, period: 
+:
 </span>
-<span class="source-lf storage-type-lflang">
-time
-</span>
-<span class="source-lf">
+<span class="source-lf meta-embedded-block-cpp">
  
 </span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf constant-numeric-int-lflang">
-1
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf constant-numeric-lflang">
-sec
-</span>
-<span class="source-lf">
-) {
+<span class="source-lf meta-embedded-block-cpp storage-type-lflang">
+bool
 </span>
 
 <span class="source-lf">
@@ -157,123 +93,7 @@ y
  
 </span>
 <span class="source-lf meta-embedded-block-cpp storage-type-lflang">
-int
-</span>
-
-<span class="source-lf">
-  
-</span>
-<span class="source-lf storage-modifier-lflang">
-timer
-</span>
-<span class="source-lf">
- t(offset, period)
-</span>
-
-<span class="source-lf">
-  
-</span>
-<span class="source-lf storage-modifier-lflang">
-state
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf variable-other-lflang">
-count
-</span>
-<span class="source-lf">
-:
-</span>
-<span class="source-lf meta-embedded-block-cpp">
- 
-</span>
-<span class="source-lf meta-embedded-block-cpp storage-type-lflang">
-int
-</span>
-<span class="source-lf meta-embedded-block-cpp">
- 
-</span>
-<span class="source-lf">
-=
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf constant-numeric-int-lflang">
-0
-</span>
-
-<span class="source-lf">
-
-</span>
-
-<span class="source-lf">
-  
-</span>
-<span class="source-lf keyword-control-lflang">
-reaction
-</span>
-<span class="source-lf">
-(
-</span>
-<span class="source-lf">
-t) 
-</span>
-<span class="source-lf keyword-operator-lflang">
-->
-</span>
-<span class="source-lf">
- y {
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-
-<span class="source-lf">
-    (self
-</span>
-<span class="source-lf keyword-operator-lflang">
-->
-</span>
-<span class="source-lf">
-count)
-</span>
-<span class="source-lf keyword-operator-lflang">
-+
-</span>
-<span class="source-lf keyword-operator-lflang">
-+
-</span>
-<span class="source-lf">
-;
-</span>
-
-<span class="source-lf comment-line-double-dash-lflang">
-    
-</span>
-<span class="source-lf comment-line-double-dash-lflang">
-//printf("Reacting at time " PRINTF_TIME ".\n", lf_time_logical_elapsed());
-</span>
-
-<span class="source-lf">
-    lf_set(y, self
-</span>
-<span class="source-lf keyword-operator-lflang">
-->
-</span>
-<span class="source-lf">
-count);
-</span>
-
-<span class="source-lf">
-  
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-<span class="source-lf">
-}
+bool
 </span>
 
 <span class="source-lf">
@@ -290,10 +110,16 @@ reaction
 (
 </span>
 <span class="source-lf support-variable-lflang">
-shutdown
+startup
 </span>
 <span class="source-lf">
-) {
+) 
+</span>
+<span class="source-lf keyword-operator-lflang">
+->
+</span>
+<span class="source-lf">
+ x, y {
 </span>
 <span class="source-lf keyword-operator-lflang">
 =
@@ -306,10 +132,20 @@ shutdown
 "
 </span>
 <span class="source-lf string-quoted-double-lflang">
-SUCCESS: the source exited successfully.
+S
 </span>
 <span class="source-lf string-quoted-double-lflang">
 "
+</span>
+<span class="source-lf">
+);
+</span>
+
+<span class="source-lf">
+    lf_set(y, 
+</span>
+<span class="source-lf constant-language-lflang">
+true
 </span>
 <span class="source-lf">
 );
@@ -331,14 +167,6 @@ SUCCESS: the source exited successfully.
 
 <span class="source-lf">
 
-</span>
-
-<span class="source-lf comment-line-double-dash-lflang">
-// This needs an STA offset because otherwise it may advance to the stop time while the
-</span>
-
-<span class="source-lf comment-line-double-dash-lflang">
-// physical connection is in the process of assigning a timestamp.
 </span>
 
 <span class="source-lf storage-modifier-lflang">
@@ -351,25 +179,7 @@ reactor
 Destination
 </span>
 <span class="source-lf">
-(STA: 
-</span>
-<span class="source-lf storage-type-lflang">
-time
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf constant-numeric-int-lflang">
-1
-</span>
-<span class="source-lf">
- ms) {
+ {
 </span>
 
 <span class="source-lf">
@@ -382,7 +192,7 @@ input
  
 </span>
 <span class="source-lf variable-other-lflang">
-x
+y
 </span>
 <span class="source-lf">
 :
@@ -391,7 +201,11 @@ x
  
 </span>
 <span class="source-lf meta-embedded-block-cpp storage-type-lflang">
-int
+bool
+</span>
+
+<span class="source-lf">
+
 </span>
 
 <span class="source-lf">
@@ -404,7 +218,7 @@ state
  
 </span>
 <span class="source-lf variable-other-lflang">
-s
+gotY
 </span>
 <span class="source-lf">
 :
@@ -413,7 +227,7 @@ s
  
 </span>
 <span class="source-lf meta-embedded-block-cpp storage-type-lflang">
-int
+bool
 </span>
 <span class="source-lf meta-embedded-block-cpp">
  
@@ -424,8 +238,8 @@ int
 <span class="source-lf">
  
 </span>
-<span class="source-lf constant-numeric-int-lflang">
-1
+<span class="source-lf constant-language-lflang">
+false
 </span>
 
 <span class="source-lf">
@@ -442,71 +256,26 @@ reaction
 (
 </span>
 <span class="source-lf">
-x) {
+y) {
 </span>
 <span class="source-lf keyword-operator-lflang">
 =
 </span>
 
-<span class="source-lf comment-line-double-dash-lflang">
-    
-</span>
-<span class="source-lf comment-line-double-dash-lflang">
-// printf("%d\n", x->value);
-</span>
-
 <span class="source-lf">
-    if (x
-</span>
-<span class="source-lf keyword-operator-lflang">
-->
-</span>
-<span class="source-lf">
-value !
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-<span class="source-lf">
- self
-</span>
-<span class="source-lf keyword-operator-lflang">
-->
-</span>
-<span class="source-lf">
-s) {
-</span>
-
-<span class="source-lf">
-      lf_print_error_and_exit(
+    lf_print(
 </span>
 <span class="source-lf string-quoted-double-lflang">
 "
 </span>
 <span class="source-lf string-quoted-double-lflang">
-Expected %d and got %d.
+Y
 </span>
 <span class="source-lf string-quoted-double-lflang">
 "
 </span>
 <span class="source-lf">
-, self
-</span>
-<span class="source-lf keyword-operator-lflang">
-->
-</span>
-<span class="source-lf">
-s, x
-</span>
-<span class="source-lf keyword-operator-lflang">
-->
-</span>
-<span class="source-lf">
-value);
-</span>
-
-<span class="source-lf">
-    }
+);
 </span>
 
 <span class="source-lf">
@@ -516,13 +285,16 @@ value);
 ->
 </span>
 <span class="source-lf">
-s
+gotY 
 </span>
 <span class="source-lf keyword-operator-lflang">
-+
+=
 </span>
-<span class="source-lf keyword-operator-lflang">
-+
+<span class="source-lf">
+ 
+</span>
+<span class="source-lf constant-language-lflang">
+true
 </span>
 <span class="source-lf">
 ;
@@ -562,13 +334,23 @@ shutdown
 </span>
 
 <span class="source-lf">
-    lf_print(
+    if (!self
+</span>
+<span class="source-lf keyword-operator-lflang">
+->
+</span>
+<span class="source-lf">
+gotY) {
+</span>
+
+<span class="source-lf">
+        lf_print_error_and_exit(
 </span>
 <span class="source-lf string-quoted-double-lflang">
 "
 </span>
 <span class="source-lf string-quoted-double-lflang">
-**** shutdown reaction invoked.
+No reaction to Y!
 </span>
 <span class="source-lf string-quoted-double-lflang">
 "
@@ -578,52 +360,7 @@ shutdown
 </span>
 
 <span class="source-lf">
-    lf_print(
-</span>
-<span class="source-lf string-quoted-double-lflang">
-"
-</span>
-<span class="source-lf string-quoted-double-lflang">
-Approx. time per reaction: 
-</span>
-<span class="source-lf string-quoted-double-lflang">
-"
-</span>
-<span class="source-lf">
- PRINTF_TIME 
-</span>
-<span class="source-lf string-quoted-double-lflang">
-"
-</span>
-<span class="source-lf string-quoted-double-lflang">
- ns
-</span>
-<span class="source-lf string-quoted-double-lflang">
-"
-</span>
-<span class="source-lf">
-, lf_time_physical_elapsed()
-</span>
-<span class="source-lf keyword-operator-lflang">
-/
-</span>
-<span class="source-lf">
-(self
-</span>
-<span class="source-lf keyword-operator-lflang">
-->
-</span>
-<span class="source-lf">
-s
-</span>
-<span class="source-lf keyword-operator-lflang">
-+
-</span>
-<span class="source-lf constant-numeric-int-lflang">
-1
-</span>
-<span class="source-lf">
-));
+    }
 </span>
 
 <span class="source-lf">
@@ -645,7 +382,7 @@ s
 </span>
 
 <span class="source-lf storage-modifier-lflang">
-federated
+main
 </span>
 <span class="source-lf">
  
@@ -654,38 +391,14 @@ federated
 reactor
 </span>
 <span class="source-lf">
-(period: 
-</span>
-<span class="source-lf storage-type-lflang">
-time
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf constant-numeric-int-lflang">
-10
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf constant-numeric-lflang">
-usec
-</span>
-<span class="source-lf">
-) {
+ {
 </span>
 
 <span class="source-lf">
   
 </span>
 <span class="source-lf variable-other-constant-reactorinstance-lflang">
-c
+ui
 </span>
 <span class="source-lf">
  
@@ -703,23 +416,17 @@ new
  
 </span>
 <span class="source-lf entity-name-type-lflang">
-Clock
+Source
 </span>
 <span class="source-lf">
-(period
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-<span class="source-lf">
-period)
+()
 </span>
 
 <span class="source-lf">
   
 </span>
 <span class="source-lf variable-other-constant-reactorinstance-lflang">
-d
+dlc
 </span>
 <span class="source-lf">
  
@@ -744,10 +451,14 @@ Destination
 </span>
 
 <span class="source-lf">
+
+</span>
+
+<span class="source-lf">
   
 </span>
 <span class="source-lf variable-other-constant-reactorinstance-lflang">
-c
+ui
 </span>
 <span class="source-lf keyword-operator-lflang">
 .
@@ -759,19 +470,19 @@ y
  
 </span>
 <span class="source-lf keyword-operator-lflang">
-~>
+->
 </span>
 <span class="source-lf">
  
 </span>
 <span class="source-lf variable-other-constant-reactorinstance-lflang">
-d
+dlc
 </span>
 <span class="source-lf keyword-operator-lflang">
 .
 </span>
 <span class="source-lf variable-other-lflang">
-x
+y
 </span>
 
 <span class="source-lf">
