Update lingua-franca and known good

--- a/test/known-good/C/src/token/MutableToken.html
+++ b/test/known-good/C/src/token/MutableToken.html
@@ -142,6 +142,20 @@ int
 ) {
 </span>
 
+<span class="source-lf comment-line-double-dash-lflang">
+  
+</span>
+<span class="source-lf comment-line-double-dash-lflang">
+// Pathetically, the Windows C compiler doesn't support arrays on the stack with a variable size.
+</span>
+
+<span class="source-lf comment-line-double-dash-lflang">
+  
+</span>
+<span class="source-lf comment-line-double-dash-lflang">
+// So we have to give a constant here instead of the parameter width.
+</span>
+
 <span class="source-lf">
   
 </span>
@@ -155,7 +169,7 @@ mutable
 input
 </span>
 <span class="source-lf">
-[width] in:
+[2] in:
 </span>
 <span class="source-lf meta-embedded-block-cpp">
  
