--- a/test/known-good/C/src/Composition.html
+++ b/test/known-good/C/src/Composition.html
@@ -537,6 +537,16 @@ FAILURE: No data received.
 </span>
 
 <span class="source-lf">
+      exit(
+</span>
+<span class="source-lf constant-numeric-int-lflang">
+1
+</span>
+<span class="source-lf">
+);
+</span>
+
+<span class="source-lf">
     }
 </span>
 
