--- a/test/known-good/C/src/PreambleFileLevel.html
+++ b/test/known-good/C/src/PreambleFileLevel.html
@@ -82,13 +82,13 @@ extends
 </span>
 
 <span class="source-lf storage-modifier-lflang">
-main
+reactor
 </span>
 <span class="source-lf">
  
 </span>
-<span class="source-lf storage-modifier-lflang">
-reactor
+<span class="source-lf entity-name-type-lflang">
+C
 </span>
 <span class="source-lf">
  {
@@ -117,6 +117,55 @@ new
 </span>
 <span class="source-lf entity-name-type-lflang">
 B
+</span>
+<span class="source-lf">
+()
+</span>
+
+<span class="source-lf">
+}
+</span>
+
+<span class="source-lf">
+
+</span>
+
+<span class="source-lf storage-modifier-lflang">
+main
+</span>
+<span class="source-lf">
+ 
+</span>
+<span class="source-lf storage-modifier-lflang">
+reactor
+</span>
+<span class="source-lf">
+ {
+</span>
+
+<span class="source-lf">
+  
+</span>
+<span class="source-lf variable-other-constant-reactorinstance-lflang">
+c
+</span>
+<span class="source-lf">
+ 
+</span>
+<span class="source-lf keyword-operator-lflang">
+=
+</span>
+<span class="source-lf">
+ 
+</span>
+<span class="source-lf keyword-control-new-lflang">
+new
+</span>
+<span class="source-lf">
+ 
+</span>
+<span class="source-lf entity-name-type-lflang">
+C
 </span>
 <span class="source-lf">
 ()
