--- a/test/known-good/C/src/concurrent/AsyncCallback.html
+++ b/test/known-good/C/src/concurrent/AsyncCallback.html
@@ -737,6 +737,13 @@ expected_time);
     }
 </span>
 
+<span class="source-lf comment-line-double-dash-lflang">
+    
+</span>
+<span class="source-lf comment-line-double-dash-lflang">
+// Use a toggle to increment expected time for every other a.
+</span>
+
 <span class="source-lf">
     if (self
 </span>
