--- a/test/known-good/C/src/concurrent/AsyncCallbackReplace.html
+++ b/test/known-good/C/src/concurrent/AsyncCallbackReplace.html
@@ -772,7 +772,7 @@ value !
 "
 </span>
 <span class="source-lf string-quoted-double-lflang">
-ERROR: Received: %d, expected 1 because the second event should have replaced the first.
+ERROR: Received: %d, expected 1 because the second event's payload should have replaced the first event's payload.
 </span>
 <span class="source-lf string-quoted-double-lflang constant-character-escape">
 \n
@@ -805,39 +805,7 @@ value);
 </span>
 
 <span class="source-lf">
-    if (self
-</span>
-<span class="source-lf keyword-operator-lflang">
-->
-</span>
-<span class="source-lf">
-toggle) {
-</span>
-
-<span class="source-lf">
-      self
-</span>
-<span class="source-lf keyword-operator-lflang">
-->
-</span>
-<span class="source-lf">
-toggle 
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf constant-language-lflang">
-false
-</span>
-<span class="source-lf">
-;
-</span>
-
-<span class="source-lf">
-      self
+    self
 </span>
 <span class="source-lf keyword-operator-lflang">
 ->
@@ -853,36 +821,6 @@ expected_time
 </span>
 <span class="source-lf">
  200000000LL;
-</span>
-
-<span class="source-lf">
-    } else {
-</span>
-
-<span class="source-lf">
-      self
-</span>
-<span class="source-lf keyword-operator-lflang">
-->
-</span>
-<span class="source-lf">
-toggle 
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf constant-language-lflang">
-true
-</span>
-<span class="source-lf">
-;
-</span>
-
-<span class="source-lf">
-    }
 </span>
 
 <span class="source-lf">
