--- a/test/known-good/C/src/lib/FileLevelPreamble.html
+++ b/test/known-good/C/src/lib/FileLevelPreamble.html
@@ -39,6 +39,10 @@ preamble
 #define FOO 2
 </span>
 
+<span class="source-lf">
+  typedef int NEW_TYPE_T;
+</span>
+
 <span class="source-lf keyword-operator-lflang">
 =
 </span>
@@ -61,6 +65,32 @@ FileLevelPreamble
 </span>
 <span class="source-lf">
  {
+</span>
+
+<span class="source-lf">
+  
+</span>
+<span class="source-lf storage-modifier-lflang">
+state
+</span>
+<span class="source-lf">
+ 
+</span>
+<span class="source-lf variable-other-lflang">
+a
+</span>
+<span class="source-lf">
+:
+</span>
+<span class="source-lf meta-embedded-block-cpp">
+ 
+</span>
+<span class="source-lf meta-embedded-block-cpp entity-name-type-lflang">
+NEW_TYPE_T
+</span>
+
+<span class="source-lf">
+
 </span>
 
 <span class="source-lf">
