--- a/test/known-good/Python/src/federated/DistributedCountDecentralizedLate.html
+++ b/test/known-good/Python/src/federated/DistributedCountDecentralizedLate.html
@@ -351,7 +351,7 @@ reaction
 </span>
 
 <span class="source-lf meta-embedded-block-py">
-    if (lf.tag() == Tag(lf.time.start() + SEC(1), 0)):
+    if (lf.tag() == Tag(lf.time.start() + SEC(1) * self.c, 0)):
 </span>
 
 <span class="source-lf meta-embedded-block-py">
