--- a/test/known-good/C/src/federated/failing/EnclaveFederatedRequestStop.html
+++ b/test/known-good/C/src/federated/failing/EnclaveFederatedRequestStop.html
@@ -7,6 +7,14 @@
 </span>
 
 <span class="source-lf comment-block-lflang">
+ * request a stop.
+</span>
+
+<span class="source-lf comment-block-lflang">
+ * Failing because we have disallowed federated scheduling enclaves.
+</span>
+
+<span class="source-lf comment-block-lflang">
  * request a stop. Note that the test has no timeout because any finite timeout can, in theory,
 </span>
 
