--- a/test/known-good/C/src/enclave/EnclaveRequestStop.html
+++ b/test/known-good/C/src/enclave/EnclaveRequestStop.html
@@ -28,7 +28,7 @@ C
 : 
 </span>
 <span class="source-lf meta-targetspec-lflang constant-numeric-int-lflang">
-10
+1
 </span>
 <span class="source-lf meta-targetspec-lflang">
  
@@ -70,10 +70,16 @@ time
  
 </span>
 <span class="source-lf constant-numeric-int-lflang">
-5
+500
 </span>
 <span class="source-lf">
- s) {
+ 
+</span>
+<span class="source-lf constant-numeric-lflang">
+msec
+</span>
+<span class="source-lf">
+) {
 </span>
 
 <span class="source-lf">
