--- a/test/known-good/C/src/federated/DecentralizedLagging.html
+++ b/test/known-good/C/src/federated/DecentralizedLagging.html
@@ -27,6 +27,10 @@
 </span>
 
 <span class="source-lf comment-block-lflang">
+ * @deprecated Use DecentralizedLaggingMW.lf instead.
+</span>
+
+<span class="source-lf comment-block-lflang">
  
 </span>
 <span class="source-lf comment-block-lflang">
