--- a/test/known-good/C/src/federated/DecentralizedMicrosteps.html
+++ b/test/known-good/C/src/federated/DecentralizedMicrosteps.html
@@ -31,6 +31,10 @@
 </span>
 
 <span class="source-lf comment-block-lflang">
+ * @deprecated Use DecentralizedMicrostepsMW.lf instead.
+</span>
+
+<span class="source-lf comment-block-lflang">
  
 </span>
 <span class="source-lf comment-block-lflang">
