--- a/test/known-good/C/src/federated/DecentralizedP2PComm.html
+++ b/test/known-good/C/src/federated/DecentralizedP2PComm.html
@@ -1,3 +1,13 @@
+<span class="source-lf comment-block-lflang">
+/**
+</span>
+<span class="source-lf comment-block-lflang">
+ @deprecated Use DecentralizedP2PCommMW.lf instead. 
+</span>
+<span class="source-lf comment-block-lflang">
+*/
+</span>
+
 <span class="source-lf meta-targetspec-lflang keyword-control-lflang">
 target
 </span>
