--- a/test/known-good/C/src/federated/DecentralizedP2PSTPViolation.html
+++ b/test/known-good/C/src/federated/DecentralizedP2PSTPViolation.html
@@ -1,5 +1,20 @@
-<span class="source-lf comment-line-double-dash-lflang">
-// Variant of DecentralizedP2PComm that has STP violations.
+<span class="source-lf comment-block-lflang">
+/**
+</span>
+
+<span class="source-lf comment-block-lflang">
+ * Variant of DecentralizedP2PComm that has STP violations.
+</span>
+
+<span class="source-lf comment-block-lflang">
+ * @deprecated Use DecentralizedP2PSTPViolationMW.lf instead.
+</span>
+
+<span class="source-lf comment-block-lflang">
+ 
+</span>
+<span class="source-lf comment-block-lflang">
+*/
 </span>
 
 <span class="source-lf meta-targetspec-lflang keyword-control-lflang">
