--- a/test/known-good/C/src/federated/DecentralizedTimeout.html
+++ b/test/known-good/C/src/federated/DecentralizedTimeout.html
@@ -106,31 +106,7 @@ reactor
 PrintLag
 </span>
 <span class="source-lf">
-(STA: 
-</span>
-<span class="source-lf storage-type-lflang">
-time
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf keyword-operator-lflang">
-=
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf constant-numeric-int-lflang">
-100
-</span>
-<span class="source-lf">
- 
-</span>
-<span class="source-lf constant-numeric-lflang">
-weeks
-</span>
-<span class="source-lf">
-) {
+ {
 </span>
 
 <span class="source-lf">
@@ -343,6 +319,16 @@ Count
 </span>
 <span class="source-lf">
  ms)
+</span>
+
+<span class="source-lf">
+  
+</span>
+<span class="source-lf keyword-operator-lflang">
+@
+</span>
+<span class="source-lf">
+maxwait(forever)
 </span>
 
 <span class="source-lf">
