--- a/test/known-good/C/src/federated/LoopDistributedDecentralized.html
+++ b/test/known-good/C/src/federated/LoopDistributedDecentralized.html
@@ -19,6 +19,10 @@
 </span>
 
 <span class="source-lf comment-block-lflang">
+ * @deprecated Use LoopDistributedDecentralizedMW.lf instead.
+</span>
+
+<span class="source-lf comment-block-lflang">
  
 </span>
 <span class="source-lf comment-block-lflang">
