--- a/test/known-good/C/src/federated/PhysicalSTP.html
+++ b/test/known-good/C/src/federated/PhysicalSTP.html
@@ -100,7 +100,7 @@ reactor
 Print
 </span>
 <span class="source-lf">
-(STP_offset_param: 
+(absent_after_value: 
 </span>
 <span class="source-lf storage-type-lflang">
 time
@@ -308,7 +308,7 @@ c);
 ->
 </span>
 <span class="source-lf">
-STP_offset_param 
+absent_after_value 
 </span>
 <span class="source-lf keyword-operator-lflang">
 -
@@ -438,7 +438,7 @@ Message arrived
 =
 </span>
 <span class="source-lf">
-} STAA(STP_offset_param) {
+} tardy {
 </span>
 <span class="source-lf keyword-operator-lflang">
 =
@@ -675,7 +675,7 @@ new
 Print
 </span>
 <span class="source-lf">
-(STP_offset_param 
+(absent_after_value 
 </span>
 <span class="source-lf keyword-operator-lflang">
 =
@@ -698,6 +698,28 @@ usec
 
 <span class="source-lf">
 
+</span>
+
+<span class="source-lf">
+  
+</span>
+<span class="source-lf keyword-operator-lflang">
+@
+</span>
+<span class="source-lf">
+absent_after(
+</span>
+<span class="source-lf constant-numeric-int-lflang">
+1
+</span>
+<span class="source-lf">
+ 
+</span>
+<span class="source-lf constant-numeric-lflang">
+usec
+</span>
+<span class="source-lf">
+)
 </span>
 
 <span class="source-lf">
