--- a/test/known-good/C/src/federated/DistributedCountDecentralizedLate.html
+++ b/test/known-good/C/src/federated/DistributedCountDecentralizedLate.html
@@ -617,13 +617,7 @@ c
 =
 </span>
 <span class="source-lf">
-} STAA(
-</span>
-<span class="source-lf constant-numeric-int-lflang">
-0
-</span>
-<span class="source-lf">
-) {
+} tardy {
 </span>
 <span class="source-lf keyword-operator-lflang">
 =
