--- a/test/known-good/C/src/federated/DistributedCountDecentralizedLateHierarchy.html
+++ b/test/known-good/C/src/federated/DistributedCountDecentralizedLateHierarchy.html
@@ -599,13 +599,7 @@ c
 =
 </span>
 <span class="source-lf">
-} STAA(
-</span>
-<span class="source-lf constant-numeric-int-lflang">
-0
-</span>
-<span class="source-lf">
-) {
+} tardy {
 </span>
 <span class="source-lf keyword-operator-lflang">
 =
@@ -1155,13 +1149,7 @@ microstep
 =
 </span>
 <span class="source-lf">
-} STAA(
-</span>
-<span class="source-lf constant-numeric-int-lflang">
-0
-</span>
-<span class="source-lf">
-) {
+} tardy {
 </span>
 <span class="source-lf keyword-operator-lflang">
 =
